# clam

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  deny.toml  dist-workspace.toml  mkdocs.yml  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish-crates-io.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning copy/phases/01-foundation-and-profile-management/: 01-00-PLAN.md  01-00-SUMMARY.md  01-01-PLAN.md  01-02-PLAN.md  01-03-SUMMARY.md  01-DISCUSSION-LOG.md  01-VERIFICATION.md
.planning copy/phases/02-launch-and-shell-integration/: 02-01-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-VERIFICATION.md
.planning copy/phases/03-developer-experience-polish/: 03-02-PLAN.md  03-02-SUMMARY.md  03-VERIFICATION.md
.planning copy/research/: FEATURES.md  SUMMARY.md
.planning/phases/01-foundation-and-profile-management/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  (+4 more)
.planning/research/: ARCHITECTURE.md  PITFALLS.md  STACK.md
docs/: commands.md  configuration.md  getting-started.md  index.md  robots.txt  shell-integration.md
overrides/: main.html
src/: claude_md.rs  cli.rs  config.rs  main.rs  output.rs  paths.rs  profile.rs  state.rs
src/commands/: add.rs  completions.rs  current.rs  env.rs  list.rs  mod.rs  remove.rs  repair.rs  run.rs  status.rs  use_cmd.rs
tests/: cli_tests.rs
(+9 files in other folders)
