[package]
name = "clmux"
version = "0.1.0"
edition = "2021"
description = "Manage multiple Claude Code profiles"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
anyhow = "1.0"
dirs = "6.0"
owo-colors = { version = "4.2", features = ["supports-colors"] }
clap_complete = "4"
serde_json = "1.0"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
