[package]
name = "clmux"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
description = "Manage multiple Claude Code profiles"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
anyhow = "1.0"
dirs = "6.0"
owo-colors = { version = "4.2", features = ["supports-colors"] }
clap_complete = "4"
serde_json = "1.0"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
